[package]
name = "grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"


[[bin]]
name="json"
path="src/json.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
arrayvec = "0.7.6"
arrow = { version = "53.2.0", features = ["prettyprint"] }
chrono = { version = "0.4.38", features = ["serde"] }
datafusion = "43.0.0"
parquet = { version = "53.2.0", features = ["futures"] }

regex = "1.11.1"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "net", "macros", "io-util"] }
winnow = { version = "0.6.20", features = ["simd"] }
